[package]
name = "untar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
quick-xml = "0.31"
tar = "0.4"
flate2 = { version = "1.0", features = ["zlib"] }
hdfs-native = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"

[dev-dependencies]
tempfile = "3.8"
