[package]
name = "untar"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# CLI and Error handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
time = { version = "0.3", features = ["formatting"] }

# TAR and Decompression
tar = "0.4"
flate2 = "1.0"
weezl = "0.1" # Potential for .Z decompression if handled correctly

# HDFS and Storage
hdfs-native = "0.13"
bytes = "1.0"
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"

# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
